# RetroGames

./: .gitignore  CMakeLists.txt  build-windows.sh  build.sh  run-windows.sh  run.sh
cmake/toolchains/: mingw_x86_64.cmake
src/: main.cpp
src/core/: entity.hpp  game.hpp  input.hpp  math.hpp  renderer.hpp  text.hpp
src/games/flappy_bird/: flappy_bird.hpp
src/games/space_invaders/: space_invaders.hpp
src/menu/: main_menu.hpp
